// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default footer Snapshot Snapshot 1`] = `
<footer
  className="govuk-footer "
  role="contentinfo"
>
  <div
    className="govuk-width-container "
  >
    <div
      className="govuk-footer__meta"
    >
      <div
        className="govuk-footer__meta-item govuk-footer__meta-item--grow"
      >
        <svg
          aria-hidden="true"
          className="govuk-footer__licence-logo"
          focusable="false"
          height="17"
          viewBox="0 0 483.2 195.7"
          width="41"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            fill="currentColor"
          />
        </svg>
        <span
          className="govuk-footer__licence-description"
        >
          All content is available under the 
          <a
            className="govuk-footer__link"
            href="/link"
            rel="license"
          >
            Open Government Licence v3.0, 
          </a>
          except where otherwise stated
        </span>
      </div>
      <div
        className="govuk-footer__meta-item"
      >
        <a
          className="govuk-footer__link govuk-footer__copyright-logo"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          rel="noreferrer noopener"
          target="_blank"
        >
          © Crown copyright
          <span
            className="govuk-visually-hidden"
          >
             
            Opens link in a new tab
          </span>
        </a>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer with secondary navigation Snapshot Snapshot 1`] = `
<footer
  className="govuk-footer "
  role="contentinfo"
>
  <div
    className="govuk-width-container "
  >
    <div
      className="govuk-footer__meta"
    >
      <div
        className="govuk-footer__meta-item govuk-footer__meta-item--grow"
      >
        <div
          className="govuk-footer__navigation"
          data-testid="footer-content"
        >
          <div
            className="govuk-footer__section govuk-grid-column-two-thirds"
          >
            <h2
              className="govuk-footer__heading govuk-heading-m"
            >
              Column One
            </h2>
            <ul
              className="govuk-footer__list govuk-footer__list--columns-2"
            >
              <li
                className="govuk-footer__list-item"
              >
                <a
                  className="govuk-footer__link"
                  href="/link1"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  Link 1
                  <span
                    className="govuk-visually-hidden"
                  >
                    Opens link in a new tab
                  </span>
                </a>
              </li>
              <li
                className="govuk-footer__list-item"
              >
                <a
                  className="govuk-footer__link"
                  href="/link2"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  Link 2
                  <span
                    className="govuk-visually-hidden"
                  >
                    Opens link in a new tab
                  </span>
                </a>
              </li>
              <li
                className="govuk-footer__list-item"
              >
                <a
                  className="govuk-footer__link"
                  href="/link3"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  Link 3
                  <span
                    className="govuk-visually-hidden"
                  >
                    Opens link in a new tab
                  </span>
                </a>
              </li>
              <li
                className="govuk-footer__list-item"
              >
                <a
                  className="govuk-footer__link"
                  href="/link4"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  Link 4
                  <span
                    className="govuk-visually-hidden"
                  >
                    Opens link in a new tab
                  </span>
                </a>
              </li>
              <li
                className="govuk-footer__list-item"
              >
                <a
                  className="govuk-footer__link"
                  href="/link5"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  Link 5
                  <span
                    className="govuk-visually-hidden"
                  >
                    Opens link in a new tab
                  </span>
                </a>
              </li>
              <li
                className="govuk-footer__list-item"
              >
                <a
                  className="govuk-footer__link"
                  href="/link6"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  Link 6
                  <span
                    className="govuk-visually-hidden"
                  >
                    Opens link in a new tab
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <div
            className="govuk-footer__section govuk-grid-column-one-third"
          >
            <h2
              className="govuk-footer__heading govuk-heading-m"
            >
              Column Two
            </h2>
            <ul
              className="govuk-footer__list "
            >
              <li
                className="govuk-footer__list-item"
              >
                <a
                  className="govuk-footer__link"
                  href="/link7"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  Link 7
                  <span
                    className="govuk-visually-hidden"
                  >
                    Opens link in a new tab
                  </span>
                </a>
              </li>
              <li
                className="govuk-footer__list-item"
              >
                <a
                  className="govuk-footer__link"
                  href="/link8"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  Link 8
                  <span
                    className="govuk-visually-hidden"
                  >
                    Opens link in a new tab
                  </span>
                </a>
              </li>
              <li
                className="govuk-footer__list-item"
              >
                <a
                  className="govuk-footer__link"
                  href="/link9"
                  rel="noreferrer noopener"
                  target="_blank"
                >
                  Link 9
                  <span
                    className="govuk-visually-hidden"
                  >
                    Opens link in a new tab
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <hr
          className="govuk-footer__section-break"
        />
        <svg
          aria-hidden="true"
          className="govuk-footer__licence-logo"
          focusable="false"
          height="17"
          viewBox="0 0 483.2 195.7"
          width="41"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            fill="currentColor"
          />
        </svg>
        <span
          className="govuk-footer__licence-description"
        >
          All content is available under the 
          <a
            className="govuk-footer__link"
            href="/link"
            rel="license"
          >
            Open Government Licence v3.0, 
          </a>
          except where otherwise stated
        </span>
      </div>
      <div
        className="govuk-footer__meta-item"
      >
        <a
          className="govuk-footer__link govuk-footer__copyright-logo"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          rel="noreferrer noopener"
          target="_blank"
        >
          © Crown copyright
          <span
            className="govuk-visually-hidden"
          >
             
            Opens link in a new tab
          </span>
        </a>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Footer with simple links Snapshot Snapshot 1`] = `
<footer
  className="govuk-footer "
  role="contentinfo"
>
  <div
    className="govuk-width-container "
  >
    <div
      className="govuk-footer__meta"
    >
      <div
        className="govuk-footer__meta-item govuk-footer__meta-item--grow"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
          data-testid="footer-content"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/link1"
                rel="noreferrer noopener"
                target="_blank"
              >
                Link 1
                <span
                  className="govuk-visually-hidden"
                >
                  Opens link in a new tab
                </span>
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/link2"
                rel="noreferrer noopener"
                target="_blank"
              >
                Link 2
                <span
                  className="govuk-visually-hidden"
                >
                  Opens link in a new tab
                </span>
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/link3"
                rel="noreferrer noopener"
                target="_blank"
              >
                Link 3
                <span
                  className="govuk-visually-hidden"
                >
                  Opens link in a new tab
                </span>
              </a>
            </li>
          </ul>
        </div>
        <svg
          aria-hidden="true"
          className="govuk-footer__licence-logo"
          focusable="false"
          height="17"
          viewBox="0 0 483.2 195.7"
          width="41"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            fill="currentColor"
          />
        </svg>
        <span
          className="govuk-footer__licence-description"
        >
          All content is available under the 
          <a
            className="govuk-footer__link"
            href="/link"
            rel="license"
          >
            Open Government Licence v3.0, 
          </a>
          except where otherwise stated
        </span>
      </div>
      <div
        className="govuk-footer__meta-item"
      >
        <a
          className="govuk-footer__link govuk-footer__copyright-logo"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          rel="noreferrer noopener"
          target="_blank"
        >
          © Crown copyright
          <span
            className="govuk-visually-hidden"
          >
             
            Opens link in a new tab
          </span>
        </a>
      </div>
    </div>
  </div>
</footer>
`;
